--- a/client/src/app/movie-modal/movie-modal.component.scss
+++ b/client/src/app/movie-modal/movie-modal.component.scss
@@ -15,4 +15,9 @@
             margin-top: 0px;
         }
     }
+  .small-logo {
+    width: 50px;
+    height: auto;
+    margin-right: 8px;
+  }
 }
