--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
+  <img src="../assets/tvtime.png" alt="Tvtime logo" height="70" width="70">
   <span>Tvtime</span>
 </mat-toolbar>
 
