--- a/client/src/app/movie-modal/movie-modal.component.html
+++ b/client/src/app/movie-modal/movie-modal.component.html
@@ -1,7 +1,7 @@
 <div class="data-container">
     <div class="header">
         <h2 *ngIf="data.movie.Title">{{ data.movie.Title }}</h2>
-        <img class="movie-poster" *ngIf="data.movie.Poster" src="{{ data.movie.Poster }}" onError="this.src='https://github.com/joaoluizn/portfolio-content/blob/master/image_not_found.png?raw=true'" alt="">
+        <img class="movie-poster" *ngIf="data.movie.Poster" src="{{ data.movie.Poster }}" onError="this.src='https://raw.githubusercontent.com/DhruvBhirud/tvtime/main/client/src/assets/404.jpg?raw=true'" alt="">
     </div>
     <div class="actors">
         <h4 class="title">Actors:</h4>
